# scrubby

./: .gitignore  COMPETITORS.md  Cargo.toml  LAUNCH.md  MONETIZATION.md  PROMPT.txt  README.md  ROADMAP.md  checksums.txt  landing.html  render.yaml
scripts/: install-local.sh  install.sh  scrub-clipboard.sh
src/: clipboard.rs  config.rs  detectors.rs  lib.rs  license.rs  main.rs  redactor.rs
tests/: integration.rs
