[package]
name = "scrubby"
version = "0.1.0"
edition = "2021"
description = "Local-first CLI to sanitize clipboard text before pasting into AI tools"
license = "MIT"

[dependencies]
regex = "1.10"
once_cell = "1.19"
base64 = "0.22"
ed25519-dalek = "2.1"
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
axum = "0.7"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# Pro features (stubs, not enabled by default)
pro-stable-placeholders = []
pro-json-report = []
pro-config = []
pro-file-stdin = []

[dev-dependencies]
tempfile = "3.10"
